--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_URL=http://localhost:3333
 MODE_ENV=development
 
 # Auth
-APP_SECRET=73b0630082dd701471874f419b4ada1a
+APP_SECRET=278f7882cadc80526b4094222ea0c501
 
 # Database
 
@@ -10,8 +10,24 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
-DB_NAME=meetapp
+DB_NAME=gobarber
 
 # Mongo
 
-MONGO_URL=mongodb://localhost:27017/meetapp
+MONGO_URL=mongodb://localhost:27017/gobarber
+
+# Redis
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# Mail
+
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USER=c30b2e7479a3e6
+MAIL_PASS=c331ddc2548550
+
+# Sentry
+
+SENTRY_DSN= https://e6103217fb524a40bb018e50496c136f@sentry.io/1503711
