--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@ APP_SECRET=73b0630082dd701471874f419b4ada1a
 
 # Database
 
-DB_HOST=localhost
+DB_HOST=192.168.99.100
 DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
-DB_NAME=meetapp
+DB_NAME=gobarber
 
 # Mongo
 
-MONGO_URL=mongodb://localhost:27017/meetapp
+MONGO_URL=mongodb://192.168.99.100:27017/gobarber
