--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
+    "date-fns": "^2.2.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
